--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@mui/x-charts": "^7.19.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "5.21.1",
+    "@tiptap/extension-text": "^2.9.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
     "HighlightedCode": "link:@mui/docs/HighlightedCode",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
