Switch database provider from MySQL to PostgreSQL and update connection URLs in environment and Prisma schema

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 localhost
-DATABASE_URL="mysql://root:mydatabase@localhost:3306/printifyPro"
+# DATABASE_URL="mysql://root:mydatabase@localhost:3306/printifyPro"
 
 
-# SUPABASE_DB_URL="postgres://postgres.liymilyooggpyunzvkal:bLLN5q62B6vxEgIc@aws-0-us-west-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
+SUPABASE_DB_URL="postgres://postgres.liymilyooggpyunzvkal:bLLN5q62B6vxEgIc@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
