--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^5.22.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
