--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-edit-text": "^5.1.1",
     "react-infinite-calendar": "^2.3.1",
     "react-to-print": "^3.0.2",
+    "sharp": "^0.33.5",
     "swr": "^2.2.5"
   },
   "devDependencies": {
